# DPP-Referenzprojekt

./: .gitignore  BaseModel.ipynb  Download_kagglehub.py  EDA_flight_prices.ipynb  PCA_pretest.ipynb  README.md  SimpleBaseModel.ipynb  Test_HyperparameterOptimization.ipynb  create_plots.py  hyperparameter_tuning.ipynb  pipelines.py  pyproject.toml  test_pipelines.py
